<resources>
    <string name="app_name">ExecSec Helper</string>


    <!-- Login Fragment Strings (prefix: 'lf' ) -->
    <string name="lfUsername">Email:</string>
    <string name="lfPassword">Password:</string>
    <string name="lfLoginButton">Login</string>


    <!-- Top Fragment Strings (prefix: 'tf' ) -->


    <!-- Transaction Count Fragment (prefix: 'tcf' ) -->
    <string name="tcfTransactionCount">Pending Transactions</string>


    <!-- SettingsActivity strings (prefix: 'set' ) -->
    <string name="setLabel">Settings</string>
    <string name="setManageGroups">Manage Groups</string>
    <string name="setLoadData">Load Data from server</string>
    <string name="setClearContacts">Clear contacts</string>
    <string name="setSafety">Safety</string>

    <string name="setNoNetworkWarning">No network connection found!</string>
    <string name="setDBPopulated">Added %d of %d records to the database</string>
    <string name="setRecordsCleared">Deleted %d records</string>
    <string name="setNeedGooglePlay">This functionality requires Google Play Services</string>


    <!-- Menu item string (prefix: 'menu' ) -->
    <string name="menuTopSettingsButton">Settings</string>
    <string name="menuNewMessageButton">New Message</string>
    <string name="menuMessageGroup">Message Group</string>


    <!-- TransactionViewerActivity strings (prefix: 'tva' )
    <string name="tvaLabel">Transaction Details</string>
    <string name="tvaNoTransaction">No transaction provided</string>
    <string name="title_activity_message_view">MessageViewActivity</string> -->


    <!-- Messager Activity strings (Prefix: 'msg' ) -->
    <string name="msgLabel">New Message</string>
    <string name="msgSent">Message(s) sent!</string>


    <!-- Messager Fragment strings (Prefix: 'msgf' ) -->
    <string name="msgfSendButton">Send</string>
    <string name="msgfSending">Sending…</string>
    <string name="msgfRecipients">Recipients</string>
    <string name="msgfMessageBody">Message Body</string>


    <!-- Contact Resolution View Holder strings (Prefixes: 'rnvh', 'rcvh', 'rmvh', 'rdf' ) -->
    <string name="rnvhDescription">Add a number</string>
    <string name="rcvhDescription">Choose a name</string>
    <string name="rmvhDescription">Add a name</string>


    <!-- Message Viewer strings  -->
    <string name="mvaSendButton">Send</string>


    <!-- ContactResolutionFragment (Prefix: 'crf' ) -->
    <string name="crfBack">Back</string>
    <string name="crfDone">Finish</string>
    <string name="crfCancel">Cancel</string>


    <!-- SheetsFetchTask strings (Prefix: 'sft' ) -->
    <string name="sftLoading">Loading…</string>


    <!-- GroupManagerActivity strings (Prefix: 'gma' ) -->
    <string name="gmaLabel">Manage Groups</string>
    <string name="gmaAddGroup">Add Group</string>
    <string name="gmaSave">Save</string>

    <string name="gmaMenuSave">Save</string>
    <string name="gmaMenuNew">New</string>
    <string name="gmaSaved">Saved!</string>


    <!-- GroupManagerViewHolder strings (Prefix: 'gmvh' ) -->
    <string name="gmvhGroupName">Name:</string>
    <string name="gmvhGroupRange">Range:</string>
    <string name="gmvhDelete">X</string>

    <string name="sgmvhSelect">Select</string>


    <!-- GroupMessager strings (Prefix: 'gmsg' ) -->
    <string name="gmsgLabel">Group Messager</string>

</resources>
