<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.es3649.execsec.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:columnCount="2"
            android:rowCount="2">

            <TextView
                android:labelFor="@id/lfUsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/lfUsername"
                style="@style/TextDark" />

            <EditText
                android:id="@+id/lfUsernameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:selectAllOnFocus="true"
                android:inputType="textEmailAddress"/>

            <TextView
                android:labelFor="@id/lfPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/lfPassword"
                style="@style/TextDark" />

            <EditText
                android:id="@+id/lfPasswordEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:selectAllOnFocus="true"
                android:inputType="textPassword"/>

        </GridLayout>

        <Button
            android:id="@+id/lfLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/ButtonDark"
            android:text="@string/lfLoginButton"/>

    </LinearLayout>

</ScrollView>
