<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".messaging.contact.UI.ContactResolutionFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/crfRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/crfButtonHolder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </android.support.v7.widget.RecyclerView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/crfButtonHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            style="@style/ButtonDark"
            android:id="@+id/crfBack"
            android:text="@string/crfBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/crfCancel"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- we might lose this button later -->
        <Button
            style="@style/ButtonDark"
            android:id="@+id/crfCancel"
            android:text="@string/crfCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/crfBack"
            app:layout_constraintEnd_toStartOf="@id/crfDone"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            style="@style/ButtonDark"
            android:id="@+id/crfDone"
            android:text="@string/crfDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/crfCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>