<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/gmvhTextLay"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextDark"
            android:layout_gravity="end|center_vertical"
            android:labelFor="@id/gmvhGroupName"
            android:text="@string/gmvhGroupName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextDark"
            android:layout_gravity="end|center_vertical"
            android:labelFor="@id/gmvhGroupRange"
            android:text="@string/gmvhGroupRange" />

    </LinearLayout>

    <EditText
        android:id="@+id/gmvhGroupName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/gmvhTextLay"
        app:layout_constraintEnd_toStartOf="@id/gmvhDeleteButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gmvhGroupRange"/>

    <EditText
        android:id="@+id/gmvhGroupRange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/gmvhTextLay"
        app:layout_constraintEnd_toStartOf="@id/gmvhDeleteButton"
        app:layout_constraintTop_toBottomOf="@id/gmvhGroupName"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- this is a delete button -->
    <Button
        android:id="@+id/gmvhDeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gmvhDelete"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorDeleteRed"
        android:padding="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>