<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.es3649.execsec.messaging.UI.MessagerActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/msgfRecipientsLabel"
            android:labelFor="@id/msgfRecipients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            style="@style/TextDark"
            android:text="@string/msgfRecipients"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/msgfRecipients"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:maxLines="4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/msgfSpinner"
            app:layout_constraintTop_toBottomOf="@id/msgfRecipientsLabel"
            app:layout_constraintBottom_toTopOf="@id/msgfMessageBodyLabel"/>

        <Spinner
            android:id="@+id/msgfSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/msgfRecipients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/msgfRecipientsLabel"/>

        <TextView
            android:id="@+id/msgfMessageBodyLabel"
            android:labelFor="@id/msgfMessageBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextDark"
            android:text="@string/msgfMessageBody"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/msgfRecipients"/>

        <EditText
            android:id="@+id/msgfMessageBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="2000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/msgfSendButton"
            app:layout_constraintTop_toBottomOf="@id/msgfMessageBodyLabel"/>

        <Button
            android:id="@+id/msgfSendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonDark"
            android:text="@string/msgfSendButton"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
